--- a/Personal-Portfolio-Front-React/src/index.css
+++ b/Personal-Portfolio-Front-React/src/index.css
@@ -2,7 +2,7 @@ body{
   margin: 0px;
   display: flex;
   justify-content: center;
-  /* background-color: #262626; */
+  background-color: #262626;
 }
 
 /* THEMES */
