Totally refactored the home page. NEXT: scrap that CV page and do it again

--- a/Personal-Portfolio-Front-React/src/components/NavbarMobile.css
+++ b/Personal-Portfolio-Front-React/src/components/NavbarMobile.css
@@ -24,7 +24,7 @@
     color: white;
     border-radius: 25px;
 
-    position: absolute;
+    position: fixed;
     top: 20px;
     width: calc(100vw - 40px);
     max-width: 2000px;
