--- a/Personal-Portfolio-Front-React/src/components/NavbarDesktop.css
+++ b/Personal-Portfolio-Front-React/src/components/NavbarDesktop.css
@@ -4,7 +4,7 @@
     color: white;
     border-radius: 25px;
     /* POSITION */
-    position: absolute;
+    position: fixed;
     top: 20px;
     width: calc(100vw - 40px);
     max-width: 2000px;
