--- a/Personal-Portfolio-Front-React/src/pages/Contactpage.css
+++ b/Personal-Portfolio-Front-React/src/pages/Contactpage.css
@@ -3,5 +3,131 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;;
+    height: 100%;
+    width: 100%;
+    gap: 10px;;
+    position: relative;
+}
+
+.ContactPage form { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;;
+}
+
+.ContactPage textarea {
+    height: 100px;
+    width: 350px;
+    max-width: 90%;
+    border-radius: 10px;
+    border: none;
+    background-color: #404040;
+    color: white;
+    font-size: 12px;
+    padding: 10px; /* Add padding to create space between text and border */
+    text-align: left; /* Align text to the left */
+    box-sizing: border-box; /* Include padding in width calculation */
+    overflow-y: auto; /* Enable vertical scrolling if text overflows */
+
+}
+
+.ContactPage textarea:focus{ 
+    outline: 3px solid #FF8535;
+}
+
+.ContactPage button { 
+    background-color: #FF8535;
+    border: none;
+    border-radius: 25px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
+    font-size: 12px;
+}
+
+.ContactPage button:hover { 
+    color: black;
+}
+
+
+/* step 1 */
+
+.ContactTextarea{ 
+    transform: translate(-200%);
+    opacity: 0;
+    transition: 500ms;
+    position: absolute;
+}
+.ContactTextareaShowing{ 
+    transform: translate(0);
+    opacity: 1;
+    transition: 500ms;
+}
+
+
+.NextBTNdiv{ 
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ContactBackArrow{ 
+    filter: grayscale(100);
+    position: absolute;
+    max-width: 30px;
+    transform: translate(-50px);
+}
+.ContactBackArrow:hover{ 
+    filter: grayscale(0);
+}
+
+
+/* step 2 */
+
+.PreferedContactContainer{ 
+    position: absolute;
+    transform: translate(200%);
+    opacity: 0;
+    transition: 500ms;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+}
+
+.PreferedContactContainerShowing{ 
+    transform: translate(0);
+    opacity: 1;
+    transition: 500ms;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+}
+
+.ContactPage input { 
+    max-width: 90%;
+    border-radius: 10px;
+    border: none;
+    background-color: #404040;
+    color: white;
+    font-size: 12px;
+    padding: 10px;
+}
+
+.ContactPage input:focus { 
+    outline: 2px solid #FF8535;;
+}
+
+.ContactPage input:valid { 
+
+}
+
+.ContactPage input:invalid { 
+    outline: 2px solid red;;
 }
